# omath

./: .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json
extlibs/: CMakeLists.txt
extlibs/code-virtualizer-sdk/: CMakeLists.txt
extlibs/code-virtualizer-sdk/include/CodeVirtualizer/: VirtualizerSDK.h
include/omath/: Mat.h  Vector2.h  Vector3.h  Vector4.h  angle.hpp  angles.hpp  color.hpp  compile_definitions.hpp  mat.hpp  matrix.hpp  triangle.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/omath/constexpr/: abs.h  asin.h  is_inf.h  is_nan.h  sqrt.h
include/omath/constexpr_math/: abs.hpp  acos.hpp  acosh.hpp  asin.hpp  asinh.hpp  atan.hpp  atan2.hpp  atanh.hpp  beta.hpp  binomial_coef.hpp  ceil.hpp  copysign.hpp  cos.hpp  cosh.hpp  erf.hpp  erf_inv.hpp  exp.hpp  expm1.hpp  fabs.hpp  fabsf.hpp  fabsl.hpp  factorial.hpp  find_exponent.hpp  find_fraction.hpp  find_whole.hpp  floor.hpp  fmod.hpp  gcd.hpp  gcem.hpp  gcem_options.hpp  (+36 more)
source/: CMakeLists.txt  Vector2.cpp  Vector3.cpp  Vector4.cpp  matrix.cpp
source/algorithm/: CMakeLists.txt
source/signature_scanner/: CMakeLists.txt  Scanner.cpp
tests/: CMakeLists.txt  UnitTestMat.cpp
tests/engines/: unit_test_iw_engine.cpp  unit_test_open_gl.cpp  unit_test_source_engine.cpp  unit_test_unity_engine.cpp
tests/general/: EncryptedContainer.cpp  UnitTestAngle.cpp  UnitTestProjection.cpp  unit_test_angles.cpp  unit_test_color.cpp  unit_test_line_trace.cpp  unit_test_mat.cpp  unit_test_prediction.cpp  unit_test_triangle.cpp  unit_test_vector2.cpp  unit_test_vector3.cpp  unit_test_vector4.cpp
(+11 files in other folders)
